--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,13 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="stylesheet" href="css/app.min.css" />
-    <link rel="stylesheet" href="css/responsive.min.css" />
     <!-- inject:js -->
     <script src="js/app.min.js"></script>
   </head>
 
+  <!--BODY-->
   <body ng-app="bgsMythCardsApp">
-
-    <div class="app">
-      <div ui-view></div>
-    </div>
-
+    <div ui-view></div>
   </body>
+
 </html>
