--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
       ng-cloak>
 
   <div class="app-container"
+       ng-controller="bgsAnimationController as animeCtrl"
        ui-view></div>
 
   <!-- inject:js -->
