--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <!--BODY-->
   <body ng-app="bgsMythCardsApp">
     <div ui-view></div>
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.1/TweenMax.min.js"></script>
+
   </body>
 
 </html>
